2010-05-22  Kent Tamura  <tkent@chromium.org>

        Reviewed by Dimitri Glazkov.

        [DRT/Chromium] Link resources and load Ahem font for Windows
        https://bugs.webkit.org/show_bug.cgi?id=39473

        * DumpRenderTree/chromium/DumpRenderTree.cpp:
        (main): Call platformInit().
        * DumpRenderTree/chromium/TestShell.h:
         Declare platformInit(). It is not related to TestShell class, but the
         implementation of paltformInit() is placed at TestShell*.{cpp,mm}.
        * DumpRenderTree/chromium/TestShellGtk.cpp:
        (platformInit):
        * DumpRenderTree/chromium/TestShellMac.mm:
        (platformInit):
        * DumpRenderTree/chromium/TestShellWin.cpp:
        (platformInit):
         - Make stdout/stderr binary mode
         - Load Ahem font

2010-05-21  Eric Seidel  <eric@webkit.org>

        Unreviewed, EWS build fix only.

        QueueStatusServer returns 500 error when EWS bots post empty queues
        https://bugs.webkit.org/show_bug.cgi?id=39523

        Mac python seems to have some built-in timezone support
        however other python installs don't.  So we need to ignore
        timezones in our parsing.

        Date parsing is tested by existing unit tests.

        * QueueStatusServer/handlers/updateworkitems.py:
         - Fix typo causing exception on server.
        * Scripts/webkitpy/common/net/bugzilla.py:
         - Fix exception due to python's lack of timezone support.

2010-05-21  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        QueueStatusServer returns 500 error when EWS bots post empty queues
        https://bugs.webkit.org/show_bug.cgi?id=39523

        updateworkitems handler was raising an exception because
        int() couldn't convert "" to a number.

        I attempted to unit test this but we don't yet have a system by
        which to load unit tests for appengine classes which depend on